welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: '=' expected but ';' found.
  a;b;c;d match {
^