welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
  var NbAdo == 0
  a;b;c;d match {
    case 12<a<20 => NbAdo = NbAdo + 1
  }
}